%% ============================================================
%% ComHub - Class Diagram (MVP Version)
%% แหล่งข้อมูล: markdown/project-scope.md
%% CSI204 - Software Engineering
%% MVP Scope: 2 Actors (Customer, Admin) / 7 Tables
%% ตัด: Staff, Manager, PrebuiltTemplate, TemplateItem,
%%      AssemblyRecord, GalleryPost, Stock Alert, Review Photos, Coupon
%% ============================================================
classDiagram

    %% ---------------- User Hierarchy (SYS-01) ----------------
    class User {
        +int id
        +string email
        +string password_hash
        +string auth_provider
        +string first_name
        +string last_name
        +string role
        +datetime created_at
        +register() bool
        +login() string
        +logout() bool
    }

    class Customer {
        %% C-01 ~ C-09 (MVP)
        +selectPart(productId, category) bool
        +swapPart(productId, category) bool
        +removePart(category) bool
        +viewBuildSummary() json
        +checkCompatibility() list
        +calculateWattage() double
        +recommendPSU() list
        +addToComparison(productId) bool
        +removeFromComparison(productId) bool
        +addWishlist(productId) bool
        +removeWishlist(productId) bool
        +submitReview(orderId, productId, rating, comment) bool
        +addToCart(productId, quantity) bool
        +updateCartQuantity(productId, quantity) bool
        +removeFromCart(productId) bool
        +uploadPaymentSlip(orderId, base64Webp) string
        +checkout() Order
        +viewOrderStatus(orderId) json
    }

    class Admin {
        %% A-01 ~ A-05 (MVP)
        +createProduct(data) bool
        +updateProduct(productId, data) bool
        +setProductActive(productId, isActive) bool
        +listAllProducts() list
        +createAdminAccount(data) bool
        +updateUserRole(userId, role) bool
        +deleteAccount(userId) bool
        +reviewPaymentSlip(orderId) json
        +approvePayment(orderId) bool
        +rejectPayment(orderId) bool
        +listAllOrders() list
        +updateOrderStatus(orderId, status) bool
        +fillTrackingNumber(orderId, trackingNum) bool
        +cancelOrder(orderId) bool
        +viewSalesDashboard() json
        +viewTopProducts() list
        +viewLowStockAlert() list
    }

    %% ---------------- Product & Catalog ----------------
    class Product {
        +int id
        +string name
        +string category
        +double price
        +int stock_quantity
        +string image_url
        +json specifications
        +bool is_active
    }

    %% ---------------- Wishlist (C-06 - No Stock Alert in MVP) ----------------
    class WishlistItem {
        +int id
        +int user_id
        +int product_id
        +datetime created_at
    }

    %% ---------------- Cart & Checkout (SYS-03 / C-01) ----------------
    class CartItem {
        %% Client-side only, persisted in LocalStorage (no DB table)
        +int product_id
        +int quantity
        +double price_per_unit
    }

    class Order {
        +int id
        +int user_id
        +double total_price
        +string order_status
        +string shipping_address
        +string payment_slip_mockup
        +string payment_status
        +string tracking_number
        +datetime created_at
    }

    class OrderItem {
        +int id
        +int order_id
        +int product_id
        +int quantity
        +double price_per_unit
    }

    class OrderLog {
        %% C-09 Order Tracking timeline (5 ขั้น)
        +int id
        +int order_id
        +string status
        +int changed_by_user_id
        +datetime created_at
    }

    %% ---------------- Review (C-07 - No Photos in MVP) ----------------
    class Review {
        +int id
        +int order_id
        +int product_id
        +int rating
        +string comment
        +datetime created_at
    }

    %% ================= Relationships =================

    %% Generalization (MVP: 2 subclasses)
    User <|-- Customer
    User <|-- Admin

    %% Customer domain
    Customer "1" --> "*" CartItem : holds
    Customer "1" --> "*" Order : places
    Customer "1" --> "*" WishlistItem : maintains
    Customer "1" --> "*" Review : writes
    Product "1" --> "*" CartItem : referenced_by
    Product "1" --> "*" WishlistItem : added_to
    Product "1" --> "*" Review : reviewed_under

    %% Order composition
    Order "1" *-- "*" OrderItem : contains
    Product "1" --> "*" OrderItem : ordered_in
    Order "1" *-- "*" OrderLog : logs
    User "1" --> "*" OrderLog : changes_status
    Order "1" --> "0..*" Review : has

    %% Admin domain
    Admin "1" --> "*" Product : manages
    Admin "1" --> "*" Order : reviews_payment
    Admin "1" --> "*" User : manages_rbac
